revised serious harm section, and added revisions on LRP methods section

--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -28,14 +28,14 @@ obligations to identify limit reference points (LRPs) for major fish stocks pres
 \end{itemize}
 \end{tcolorbox}
 
-Amendments to the Canadian *Fisheries Act* (2019) include new Fish Stocks provisions that introduce legal obligations to manage stocks to promote sustainability and avoid biological limit reference points, LRPs [@dfoScienceAdvicePrecautionary2021]. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions experienced by the stock. These obligations apply to major fish stocks that are prescribed under regulations. They reinforce the previously established DFO policies to manage stocks consistent with the precautionary approach. These include [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm) [@dfoFisheryDecisionMakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html) [@dfoCanadaPolicyConservation2005].
+Amendments to the Canadian *Fisheries Act* (2019) include new Fish Stocks provisions that introduce legal obligations to manage stocks to promote sustainability and avoid biological limit reference points, LRPs [@dfoScienceAdvicePrecautionary2021]. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions experienced by the stock. These obligations apply to major fish stocks that are prescribed under regulations. They reinforce the previously established DFO policies to manage stocks consistent with the precautionary approach. These include [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm) [@dfoFisheryDecisionmakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html) [@dfoCanadaPolicyConservation2005].
 
 Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is expected to occur to the stock.   Definitions of serious harm within the DFO literature tend to focus on impaired productivity, although other aspects of serious harm are sometimes captured (see grey box below, adapted from Marentette et al. (In prep)^[Marentette, J.R., Barrett, T., Cogliati, K.M., Ings, D., Ladell, J., Thiess, M.  Operationalizing Serious Harm: Existing Guidance and Contemporary Canadian Practices. Can. Sci Avis. Secr. Working Paper In prep.]). 
 
 <!--CH comment: send this grey box to Julie M. for her review 30 March-->
 \begin{tcolorbox}[sharp corners, boxrule=0.2mm]
 \subsection{Interpretations of serious harm}
-Serious harm has been interpreted as any changes to the biological properties of the stock that make growth or rebuilding to target levels cease to be considered rapid and secure\textsuperscript{1}. These changes are considered serious and difficult to reverse\textsuperscript{2,3}, and can be associated with: 
+Serious harm has been interpreted as any changes to the biological properties of the stock that make growth or rebuilding to target levels cease to be considered rapid and secure\textsuperscript{1}. These changes are considered difficult to reverse\textsuperscript{2,3}, and can be associated with: 
 
 \begin{itemize}
 \item	impaired productivity\textsuperscript{1-6} resulting from changes to biological processes such as recruitment, growth, maturation and survival\textsuperscript{1,4}; 
@@ -45,15 +45,14 @@ Serious harm has been interpreted as any changes to the biological properties of
 
 \end{itemize}
 
-At this status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities\textsuperscript{6}. 
+At this status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities\textsuperscript{6}.Serious harm may be due to fishing, other human-induced mortality, or other changes in population dynamics unrelated to fishing\textsuperscript{4}.
 
 \end{tcolorbox}
 
-\footnotesize\textsuperscript{1}DFO 2016a; \textsuperscript{2}Kronlund et al. 2018; \textsuperscript{3}Shelton and Rice 2002; \textsuperscript{4}DFO 2006; \textsuperscript{5}Smith et al. 2012; \textsuperscript{6}DFO 2009a
+\footnotesize\textsuperscript{1}[@dfoProceedingsNationalPeer2016a]; \textsuperscript{2}[@kronlundSelectionRoleLimit2018]; \textsuperscript{3}[@sheltonLimitsOverfishingReference2002]; \textsuperscript{4}[@dfoHarvestStrategyCompliant2006]; \textsuperscript{5}[@smithTechnicalGuidelinesProvision2012]; \textsuperscript{6}[@dfoFisheryDecisionmakingFramework2009]
 
 
-
-The definition of serious harm from @dfoFisheryDecisionMakingFramework2009 indicates that LRPs should be *above* the level where serious harm is expected to occur, not at the level where it is occurring, and that long-term losses of fishing opportunities may occur below that level.  Defining the level before serious harm occurs to a species or ecosystem is a pervasive challenge as harm is often not identified until it is already occurring [@hilbornQuantitativeFisheriesStock1986] and population dynamics are not well understood at low population sizes [@dfoHarvestStrategyCompliant2006; @keithPopulationDynamicsMarine2012]<!--[but see @chenIncorporatingAlleeEffects2002]-->. Also, this definition of serious harm includes possible impacts on other ecosystem components, which are often challenging to identify because of limited data and poor understanding of ecosystem linkages and dynamics [but see @chagarisEcologicalReferencePoints2020].
+\normalsize The definition of serious harm from @dfoFisheryDecisionmakingFramework2009 indicates that LRPs should be *above* the level where serious harm is expected to occur, not at the level where it is occurring, and that long-term losses of fishing opportunities may occur below that level.  Defining the level before serious harm occurs to a species or ecosystem is a pervasive challenge as harm is often not identified until it is already occurring [@hilbornQuantitativeFisheriesStock1986] and population dynamics are not well understood at low population sizes [@dfoHarvestStrategyCompliant2006; @keithPopulationDynamicsMarine2012]<!--[but see @chenIncorporatingAlleeEffects2002]-->. Also, this definition of serious harm includes possible impacts on other ecosystem components, which are often challenging to identify because of limited data and poor understanding of ecosystem linkages and dynamics [but see @chagarisEcologicalReferencePoints2020].
  
  
 <!--CH omit: Serious harm can result from over-fishing, other human induced mortality, or changes in population dynamics not related to fishing [@dfoHarvestStrategyCompliant2006].-->
