--- a/guidelinesWP/06-chap6.Rmd
+++ b/guidelinesWP/06-chap6.Rmd
@@ -133,7 +133,11 @@ There is increasing evidence of time-varying population processes in Pacific sal
 
 Time-varying recruitment parameters affect estimates of salmon benchmarks [e.g., S~MSY~ and S~gen~, @holtImpactTimevaryingProductivity2020] and are also likely to affect population trends, resulting in changes to benchmarks based on historical observations [e.g., percentile-based benchmarks, @holtEvaluatingBenchmarksBiological2018]. Analytical methods for time-varying reference points have been proposed for other marine fish species [@amarEvaluationTwoManagement2009; @puntFisheriesManagementClimate2014], some of which have been evaluated empirically and in simulation with mixed results [@olearyComparisonMultipleApproaches2020; @bergerCharacterTemporalVariability2019]. @bergerCharacterTemporalVariability2019 suggests that dynamic reference points that track changes in underlying population processes are most useful in situations when stock productivity shifts directionally and the productivity signal is correctly ascertained. In contrast, uncertainty from incorrectly identifying productivity trends can be a major source of inaccuracy in stock status [@bergerCharacterTemporalVariability2019]. 
 
-Although evidence for time-varying population processes is strong, guidance on incorporating these changes into assessment and management of Pacific salmon are lacking. In a review of stock-recruit analyses for Pacific salmon, @adkisonReviewSalmonSpawnerRecruitment2021 highlighted that even when there is strong evidence for non-stationarity in population dynamics it is not clear if reference points should be adjusted accordingly.  Where stock depletion is associated with time-varying parameters that are thought be reversible, it may be more appropriate to protect the population from harvest by maintaining reference points using all historical data [@dfoProceedingsNationalWorkshop2013; @szuwalskiClimateChangeNonstationary2016]. @dfoHarvestStrategyCompliant2006 recommended that changes to reference points should only occur when there is considerable evidence that productivity has changed and there are no expectations that these changes will be reverted naturally or achieved through management. Furthermore, DFO's Precautionary Approach Framework states that "when developing reference points efforts should be made to take into consideration the range of factors which may affect the productivity of the stock including changes in ocean conditions, where information is available" [@dfoFisheryDecisionMakingFramework2009]. This information can help identify if reductions in productivity are likely to be irreversible or only slowly reversible. @klaerHowMuchEvidence2015 devised a framework for evaluating the degree of confidence in productivity shifts in Australian fisheries, and similar approaches could be adapted for Canadian salmon populations. 
+
+
+Although evidence for time-varying population processes is strong, guidance on incorporating these changes into assessment and management of Pacific salmon are lacking. In a review of stock-recruitment analyses for Pacific salmon, @adkisonReviewSalmonSpawnerRecruitment2021 highlighted that even when there is strong evidence for non-stationarity in population dynamics it is not clear if reference points should be adjusted accordingly. Where stock depletion is associated with time-varying parameters that are thought to be reversible, it may be more appropriate to protect the population from harvest by maintaining reference points using all historical data [@dfoProceedingsNationalWorkshop2013; @szuwalskiClimateChangeNonstationary2016]. @dfoHarvestStrategyCompliant2006 recommended that changes to reference points should only occur when there is considerable evidence that productivity has changed and there are no expectations that these changes will be reverted naturally or achieved through management. Further more, DFO's Precautionary Approach Framework states that "when developing reference points efforts should be made to take into consideration the range of factors which may affect the productivity of the stock including changes in ocean conditions, where information is available"[@dfoFisheryDecisionmakingFramework2009]. This information can help identify if reductions in productivity are likely to be reversible or only slowly reversible. @klaerHowMuchEvidence2015 devised a framework for evaluating the degree of confidence in productivity shifts in Australian fisheries, and similar approaches could be adapted for Canadian salmon populations.
+
+
 
 Even if time-varying benchmarks or reference points are considered, it is difficult to define how often they should be changed [@zhangReportOceanFrontier2021]. Mistimed changes in benchmarks or reference points may lead to biases in stock status and volatility of management responses may lead to management uncertainty, reducing trust in the management process [@adkisonReviewSalmonSpawnerRecruitment2021]. Recent studies recommend the use of case-specific feedback simulation exercises in order to determine the appropriate scale to adjust reference points when stock-recruitment parameters are non-stationary [@holtImpactTimevaryingProductivity2020; @zhangAccountingNonstationaryStock2021; @olearyComparisonMultipleApproaches2020]. However, full feedback simulation studies might not be feasible for every CU where trends are suspected due to limited resources. 
 
@@ -142,7 +146,7 @@ Further research identifying when and how to account for time-varying parameters
 
 ### ADAPTING LRPS TO INCLUDE A BROADER SCOPE OF SERIOUS HARM
 
-We recommend future research into LRPs that consider the ecosystem component of serious harm for Pacific salmon and include longer time frames for assessing thresholds of serious harm. While the definition of serious harm under DFO's Precautionary Approach Framework encompasses impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009], the assessment of harm to these components depends to some extent on the time frame being considered. Assessments that include only very recent data may miss large declines in status and ecosystem impacts that occurred historically before the advent of modern survey records. In some cases, considering a longer view from genetic, archeological, paleoecological, or Indigenous Knowledge has demonstrated that recent declines are part of much larger historical declines associated with large-scale ecosystem impacts [@eckertDivingBackTime2018; @leeDiverseKnowledgeSystems2019; @priceGeneticsCenturyOld2019; @mckechnieArchaeologicalDataProvide2014].
+We recommend future research into LRPs that consider the ecosystem component of serious harm for Pacific salmon and include longer time frames for assessing thresholds of serious harm. While the definition of serious harm under DFO's Precautionary Approach Framework encompasses impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionmakingFramework2009], the assessment of harm to these components depends to some extent on the time frame being considered. Assessments that include only very recent data may miss large declines in status and ecosystem impacts that occurred historically before the advent of modern survey records. In some cases, considering a longer view from genetic, archeological, paleoecological, or Indigenous Knowledge has demonstrated that recent declines are part of much larger historical declines associated with large-scale ecosystem impacts [@eckertDivingBackTime2018; @leeDiverseKnowledgeSystems2019; @priceGeneticsCenturyOld2019; @mckechnieArchaeologicalDataProvide2014].
 
 Indigenous Knowledge has been considered in the development of target reference points for fisheries management [@caddyReferencePointsFisheries1995], and there is value in further considering its role in identifying serious harm. @reidTwoEyedSeeingIndigenous2021 introduce the concept of Two-Eyed Seeing (Etuaptmumk in Mi’kmaw), where both Indigenous and Western science perspectives are valued through the process of, “learning to see from one eye with the strengths of Indigenous knowledges and ways of knowing, and from the other eye with the strengths of mainstream knowledges and ways of knowing, and to use both these eyes together, for the benefit of all”.  By investigating serious harm, reference points, and the time-varying nature of these concepts from both Indigenous and Western scientific perspectives, LRPs may better reflect biological processes underlying both knowledge systems. <!--CH: I see the internal inconsistency here where our direction from NHQ is to provide scientifically based LRPs, yet reconciliation says we should change our perspective and not focus entirely on western science. However, our TWG really wasn't equipped to do this and was beyond our ToR-->
 
