--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -137,7 +137,7 @@ CH: the challenge is I had original text saying the Salmon Scanner did not incor
 
 
 
-Various benchmarks on spawner abundances have been identified to account for differences in data types, quantities and qualities among CUs. For data-rich CUs where spawner-recruitment relationships can be reliably estimated, @holtEvaluationBenchmarksConservation2009 recommend a lower benchmark at the abundance resulting in recovery to spawner abundances at maximum sustained yield, S~MSY~, in one salmon generation under equilibrium conditions, S~gen~. When applying stock-recruitment analyses, the spatial scale of density dependence should be carefully considered, which may be smaller or larger than the CU. Where recruitment time-series are not available and productivity is assumed to be moderate or high, and harvest rates moderate or low, specified percentiles of observed spawner time-series (e.g., 25^th^) can be used as a proxy for spawner-recruitment benchmarks [@holtEvaluatingBenchmarksBiological2018]. For Chinook and Coho Salmon where production is often limited by the quantity of freshwater habitat, equilibrium spawner abundances can be predicted from habitat characteristics to inform abundance-based benchmarks [@nobleHabitatbasedEscapementBenchmarks2015; @parkenHabitatbasedMethodsEstimate2006]. For example, @parkenHabitatbasedMethodsEstimate2006 use the relationship between watershed area and spawner-recruitment based reference points in a meta-analysis of Chinook Salmon populations<!--LW: changed from stocks. Paper uses the word stock but I think they are different than SMUs or CUs (pre-CU and SMU definitions)--> from across the Pacific region to predict reference points for Chinook populations<!--LW: changed from stocks--> without recruitment data.
+Various benchmarks on spawner abundances have been identified to account for differences in data types, quantities and qualities among CUs. For data-rich CUs where spawner-recruitment relationships can be reliably estimated, @holtEvaluationBenchmarksConservation2009 recommend a lower benchmark at the abundance resulting in recovery to spawner abundances at maximum sustained yield, S~MSY~, in one salmon generation under equilibrium conditions, S~gen~. When applying stock-recruitment analyses, the spatial scale of density dependence should be carefully considered, which may be smaller or larger than the CU. Where recruitment time-series are not available and productivity is assumed to be moderate or high, and harvest rates moderate or low, specified percentiles of observed spawner time-series (e.g., 25^th^) can be used as a proxy for spawner-recruitment benchmarks [@holtEvaluatingBenchmarksBiological2018]. For Chinook, Sockeye, and Coho Salmon where production is often limited by the quantity of freshwater habitat, equilibrium spawner abundances can be predicted from habitat characteristics to inform abundance-based benchmarks [@nobleHabitatbasedEscapementBenchmarks2015; @parkenHabitatbasedMethodsEstimate2006]. For example, @parkenHabitatbasedMethodsEstimate2006 use the relationship between watershed area and spawner-recruitment based reference points in a meta-analysis of Chinook Salmon populations<!--LW: changed from stocks. Paper uses the word stock but I think they are different than SMUs or CUs (pre-CU and SMU definitions)--> from across the Pacific region to predict reference points for Chinook populations<!--LW: changed from stocks--> without recruitment data. Also, information on freshwater habitat capacity can be used to develop informative priors for stock-recruitment benchmarks estimated with Bayesian techniques (e.g., @atlasLandscapeBiophysicalControls2020 for Sockeye Salmon).
 
 Similarly, metrics and benchmarks on long-term and short-term trends in spawner abundances are included in the Salmon Scanner. Long-term trends are measured by the ratio of recent generational geometric average spawner abundances relative to the long-term geometric average, and short-term trends are measured as the percent change in spawner abundances over 3 generations, the time period used in COSEWIC assessments [@holtEvaluationBenchmarksConservation2009]. Lower benchmarks on these metrics represent levels below which there is increased risk of extinction [@holtIndicatorsStatusBenchmarks2009]. <!--CH: I feel like this is repetitive given the table, but Sue asked for a more balanced description of metrics and benchmarks, covering all categories...-->
 
@@ -296,7 +296,7 @@ In addition to CU status-based LRPs, we developed LRPs along a gradient of aggre
 
 **Logistic regression LRPs**
 
-Logistic regression LRPs can be derived from an empirically estimated relationship between CU-level statuses and aggregate SMU abundance. This method extends the CU status-based LRP by identifying the aggregate abundance level that has historically been associated with all component CUs having status above the Red zone, as approximated from status on a single metric of spawner abundances relative to a lower benchmark. For each year of observed data, SMU-level status is quantified as a Bernoulli variable: 1 (success) = all CUs have estimated status greater than the lower benchmark and 0 (failure) = all CUs did not have status greater than the lower benchmark, i.e., at least one CU was assessed below the lower benchmark. A logistic regression is then fit to these outcomes to estimate the probability that all CUs have abundances above their lower benchmarks as a function of aggregate SMU-level spawner abundances. The following logistic regression equation is used to estimate LRPs,
+Logistic regression LRPs can be derived from an empirically estimated relationship between CU-level statuses and aggregate SMU abundance. This method extends the CU status-based LRP by identifying the aggregate abundance level that has historically been associated with all component CUs having status above the Red zone, as approximated from status on a single metric of spawner abundances relative to a lower benchmark. For each year of observed data, SMU-level status is quantified as a Bernoulli variable: 1 (success) = all CUs have estimated status greater than the lower benchmark and 0 (failure) = all CUs did not have status greater than the lower benchmark, i.e., at least one CU was assessed below the lower benchmark. A logistic regression is then fit to these outcomes to estimate the probability that all CUs have abundances above their lower benchmarks as a function of aggregate SMU-level spawner abundances. Given the difference in number of component CUs among salmon species (more for Sockeye Salmon than for other species), the likelihood of at least one component CU having Red status is greater for Sockeye. The following logistic regression equation is used to estimate LRPs,
 
 \begin{equation}
   \log(\frac{p}{1-p}) = B_0 + B_1 \sum_{i}^{i=nCUs} S_{i,t}
