added generational assessments to guidelines

--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -373,10 +373,10 @@ Projection LRPs may be inappropriate when:
 Furthermore, projection LRPs may be more appropriate when pairwise correlations in spawner abundances among CUs are positive and strong, but this is not a requirement. It is possible to estimate projection LRPs for an SMU with component CUs that vary independently. However, when correlations between CUs are low, the aggregate abundance LRP will be high because there is a higher probability of any one CU having Red status. In these cases, CU status-based LRPs and harvest control rules that manage CUs independently may be more appropriate. <!--CH omit? : When used to inform operational control points, very high aggregate abundance LRPs may conflict with harvest or other socioeconomic objectives.-->
 
 ### Step 9: Apply aggregate abundance LRPs to derive SMU-level status and compare to status against CU status-based LRPs
-
+        
 Aggregate abundance methods are then applied to derive LRPs based on the guidance above. See Appendix \@ref(app:case-studies) and Holt et al. (In review) for example applications. When status of an SMU is inferred from aggregate abundance LRPs using a subset of CUs that are considered representative of the remaining data-deficient CUs, then the resulting status should be considered 'provisional' until the status of all component CUs can be assessed. When status of data-deficient CUs cannot be inferred from data-rich CUs, status cannot be assessed with aggregate abundance LRPs.
 
-We use generational mean spawner abundances as a basis for determining whether the SMU is above or below its LRP. A generational mean integrates status over cohorts within a generation, which are generally independent of each other because of the anadromous, semelparous life-history of Pacific salmon and the dominance of a single age-at-maturity for many stocks [@holtIndicatorsStatusBenchmarks2009; @porsztReliabilityIndicatorsDecline2012]. As a result, generational smoothing reduces noise in annual CU status determination arising from both interannual variability in CU abundances from different cohorts and annual observation error in estimated spawner abundances. It also makes our determination of LRP status consistent with the approach taken for abundance-based benchmarks in published WSP assessments [e.g., @grant2017FraserSockeye2020] and the Salmon Scanner at the CU level.
+We use generational mean spawner abundances as a basis for determining whether the SMU is above or below its LRP. A generational mean integrates status over cohorts within a generation, which are generally independent of each other because of the anadromous, semelparous life-history of Pacific salmon and the dominance of a single age-at-maturity for many stocks [@holtIndicatorsStatusBenchmarks2009; @porsztReliabilityIndicatorsDecline2012]. As a result, generational smoothing reduces noise in annual CU status determination arising from both interannual variability in CU abundances from different cohorts and annual observation error in estimated spawner abundances. It also makes our determination of LRP status consistent with the approach taken for abundance-based benchmarks in published WSP assessments [e.g., @grant2017FraserSockeye2020] and the Salmon Scanner at the CU level. Further, we recommend that SMU status be evaluated approximately every salmon generation to align with guidance for generational CU assessments under the WSP [@grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020].
 
 
 
@@ -390,7 +390,7 @@ Using multiple analytical approaches to define LRPs is consistent with the princ
 <!--CH: the following 2 lines give a line break before the next heading-->
 \
 &nbsp;
-**Compare Status from Aggregate abundance LRPs to that from CU status-based LRPs**
+**Compare Status from Aggregate Abundance LRPs to that from CU status-based LRPs**
 
 In this step, we recommend comparing status from aggregate abundance LRPs to that obtained from CU status-based LRPs identified in Step 5. While aggregate abundance LRPs exploit observed covariation in population dynamics among component CUs, several factors can lead to a break-down in that relationship (e.g., observation errors, temporal variation in covariation, and/or infrequent extreme events). Hence, statuses from aggregate abundance LRPs may differ from those based on CU status-based LRPs. We recommend CU status-based LRPs as the default LRP to implement the Fish Stocks provisions, with aggregate abundance LRPs supplemental where required for harvest management purposes. 
 
