--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -246,9 +246,7 @@ knitr::include_graphics("figure/chinook-inlet-timeseries.png")
 
 CU status was derived from the proportion of component inlets above their lower benchmarks. Serious harm is expected to occur at levels where any one inlet within each of the three CUs dropped below its lower benchmark. Here we have assumed that the status of the one escapement indicator population in the West Vancouver Island-North CU (Marble River, in Quatsino Sound) is not significantly enhanced and is representative of the CU. However, further review of these assumptions by local experts is warranted.
 
-## LRP ESTIMATION: PROPORTION OF CUS
-
-*\textcolor{cyan}{LW: what should this heading be now? LRP ESTIMATION: CU STATUS-BASED?}*
+## LRP ESTIMATION: CU STATUS BASED
 
 
 ### Methods
