--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -129,9 +129,8 @@ Based on recommendations in @holtEvaluatingBenchmarksBiological2018 (Table \@ref
 The methods for multidimensional assessments within the Salmon Scanner are described in Section \@ref(MethodsChapter). In applying the multidimensional approach to ISC Chum, we used percentile benchmarks as recommended in @holtEvaluatingBenchmarksBiological2018 for lower and upper benchmarks for the five CUs that have appropriate percentiles benchmarks identified (as described above). Percentile benchmarks were not available for Bute Inlet and Southern Coastal Streams, in which case the multidimensional algorithm used trends to assess CU status (Figure \@ref(fig:decision-tree)).
 
 
-## LRP ESTIMATION: PROPORTION OF CUS
+## LRP ESTIMATION: CU STATUS BASED
 
-*\textcolor{cyan}{LW: what should this heading be now? LRP ESTIMATION: CU STATUS-BASED?}*
 
 ### Methods
 
