--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -32,7 +32,6 @@ Amendments to the Canadian *Fisheries Act* (2019) include new Fish Stocks provis
 
 Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is expected to occur to the stock.   Definitions of serious harm within the DFO literature tend to focus on impaired productivity, although other aspects of serious harm are sometimes captured (see grey box below, adapted from Marentette et al. (In prep)^[Marentette, J.R., Barrett, T., Cogliati, K.M., Ings, D., Ladell, J., Thiess, M.  Operationalizing Serious Harm: Existing Guidance and Contemporary Canadian Practices. Can. Sci Avis. Secr. Working Paper In prep.]). 
 
-<!--CH comment: send this grey box to Julie M. for her review 30 March-->
 \begin{tcolorbox}[sharp corners, boxrule=0.2mm]
 \subsection{Interpretations of serious harm}
 Serious harm has been interpreted as any changes to the biological properties of the stock that make growth or rebuilding to target levels cease to be considered rapid and secure\textsuperscript{1}. These changes are considered difficult to reverse\textsuperscript{2,3}, and can be associated with: 
@@ -85,7 +84,8 @@ CH: you're right about IFR coho, but they do 'tend' to in my experience. -->
 ### SPATIAL SCALES OF ASSESSMENT
 
 Salmon have a complex hierarchical populations structure that extends from taxonomic species to local demes or spawning locations (Fig. \@ref(fig:DiversitySchematic)). CUs are nested within major life-history variants of a taxonomic species, such as ocean- and stream-type Chinook Salmon, *Oncorhynchus tshawytscha*, and populations are nested within CUs [@dfoCanadaPolicyConservation2005].
-While the assessment of Pacific salmon under the WSP has focused on setting benchmarks for individual salmon CUs [@dfoCanadaPolicyConservation2005], the revised *Fisheries Act* indicates that a single LRP is required for each "Major Fish Stock"[@dfoScienceAdvicePrecautionary2021]. In the context of Pacific salmon, "Major Fish Stocks" are defined as Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status [@dfoPreliminary2021Salmon2021].  This provision created the need for the development of methodologies to estimate LRPs for the assessment and management of fisheries at the SMU level, while considering the need to maintain all CUs within an SMU in Amber or Green zones, i.e., above Red status. 
+While the assessment of Pacific salmon under the WSP has focused on setting benchmarks for individual salmon CUs [@dfoCanadaPolicyConservation2005], the revised *Fisheries Act* indicates that a single LRP is required for each "Major Fish Stock"[@dfoScienceAdvicePrecautionary2021]. In the context of Pacific salmon, "Major Fish Stocks" are defined as Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status [@dfoPreliminary2021Salmon2021].  The delineation of SMUs was in part a response to the national-level requirement for delineating "Major Stocks" for Pacific salmon under the *Fisheries Act*. This provision created the need for the development of methodologies to estimate LRPs for the assessment and management of fisheries at the SMU level, while considering the need to maintain all CUs within an SMU in Amber or Green zones, i.e., above Red status. 
+
 
 ```{r DiversitySchematic, fig.cap="Schematic representation of hierarchical population structure of Pacific salmon (left) with the spatial scales of a selection of uses and management activities alighed with those scales, including the scale of Stock Management Units, SMUs (right)", out.width = '100%', warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/DiversitySchematic.png")
